--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,7 +37,7 @@ body {
     font-weight: bold;
 }
 #onlyvideo{
-    max-width: 1280px;
+    max-width:1351px
 }
 
 #videowatch{
@@ -47,7 +47,6 @@ body {
 	flex-direction: column;
 	margin-left: 50px;
 	margin-top: 20px;
-	margin-bottom: 20px;
 }
 
 #videowatch img {
@@ -131,6 +130,31 @@ body {
 	color: white;
 }
 
+#sidebar2 {
+    display:flex;
+	width: 300px;
+	min-height: 700px;
+	margin: 10px;
+	background-color: #212121;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+#sidebar2 a {
+    text-decoration: none;
+}
+
+#sidebar2 img {
+	padding: 0;
+	width: 35px;
+	height: 35px;
+	margin: 5px;
+}
+
+#sidebar2-content{
+    min-height: 800px;
+}
+
 #sidebar {
     display:flex;
 	width: 300px;
@@ -139,6 +163,13 @@ body {
 	background-color: #212121;
 	flex-direction: column;
 	justify-content: space-between;
+}
+
+#sidebar img {
+	padding: 0;
+	width: 35px;
+	height: 35px;
+	margin: 5px;
 }
 
 #sidebar-content{
